code committed for SFDC-418

--- a/src/classes/Leads.cls
+++ b/src/classes/Leads.cls
@@ -26,6 +26,28 @@ public class Leads  extends SObjectDomain {
         Map<Id, SObject> parentMap = CadenceService.getParentObject(leadsWithoutCadence, CadenceConstants.LEAD_DB_OBJECT_FIELD_NAME, CadenceConstants.DB_OBJECT_NAME); 
         for(Lead leadObj: (List<Lead>) leadsWithoutCadence) {
             SObject parentObj;
+			
+			if(leadObj.ringdna100__Call_Attempts__c == null){
+                leadObj.ringdna100__Call_Attempts__c=0;
+            }
+            if(leadObj.ringdna100__Email_Attempts__c == null){
+                leadObj.ringdna100__Email_Attempts__c=0;
+            }
+            
+            if(leadObj.ringdna100__Message_Attempts__c == null){
+                leadObj.ringdna100__Message_Attempts__c=0;
+            }
+            if(leadObj.RDNACadence__NumberofLocations__c == null){
+                leadObj.RDNACadence__NumberofLocations__c=0;
+            }
+            if(leadObj.NumberOfEmployees == null){
+                leadObj.NumberOfEmployees=0;
+            }
+            if(leadObj.AnnualRevenue == null){
+                leadObj.AnnualRevenue=0;
+            }
+            
+			
             if(!parentMap.isEmpty() && leadObj.get(CadenceConstants.LEAD_DB_OBJECT_FIELD_NAME) != null) {
 	            parentObj = parentMap.get((Id)leadObj.get(CadenceConstants.LEAD_DB_OBJECT_FIELD_NAME));
             }
