--- a/src/classes/RuleCriterionMatcher.cls
+++ b/src/classes/RuleCriterionMatcher.cls
@@ -97,7 +97,7 @@ public with sharing class RuleCriterionMatcher {
         
 		//Returning if given cad is null
 		if(cad == null) {
-			return null;
+            return false;
 		} 
 		System.debug('matchExitCriterion:##12');
 		//Getting cadence criterion for cadence		
